# robot-learning-research-template

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
configs/: README.md  config.yaml
configs/algorithm/: dummy.yaml
configs/dataset/: dummy.yaml
configs/eval/: dummy.yaml
configs/experiment/: smoke.yaml
data/: README.md
docs/: design.md
src/template/algorithms/: README.md  __init__.py  base.py  dummy.py
src/template/datasets/: README.md  __init__.py  base.py  dummy.py
src/template/debug/: README.md
src/template/experiments/: README.md  __init__.py  base.py  smoke.py
src/template/experiments/eval/: README.md  __init__.py  base.py  dummy.py
src/template/experiments/training/: README.md  base.py
src/template/utils/: README.md  checkpoint.py  ckpt_utils.py  wandb.py
tests/: test_factories.py  test_smoke.py  test_wandb.py
